fixed index.html alignments

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: silver;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -10,6 +11,11 @@ header {
     background-color: #4584b1;
     color: #fff;
     font-size: 1rem;
+  }
+
+  ul > li > a {
+    text-decoration: none;
+    color: #fff;
   }
 
 header > div {
@@ -31,6 +37,10 @@ header > div > h2 {
     background-color: salmon;
     display: flex;
     justify-content: flex-end;
+}
+
+#header {
+    height: ;
 }
 
 .menu {
@@ -82,12 +92,24 @@ footer {
 
 /* index page */
 
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 33.333333%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5px;
+}
+
 .video {
     font-size: large;
     margin: 10px;
     color: #fff;
     background-color: #4584b1;
     width: 20rem;
+    height: 18em;
+    padding: 5px;
 }
 
 .title {
@@ -118,6 +140,13 @@ footer {
   text-align: center;
 }
 
+#new2 {
+    margin: 20px;
+    padding: 20px;
+    row-gap: 25px;
+    background-color: salmon;
+}
+
 #show {
    background-color: salmon; 
 
@@ -128,6 +157,6 @@ footer {
 }
 
 #button {
-    background-color: salmon;
+    background-color:#4584b1;
     color: #fff;
 }
